# mac_maya_dev

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  maya-dev.toml.example  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/mac_maya_dev/: __init__.py  cli.py  config.py  errors.py  operations.py  remote.py  snapshot.py  windows.py
tests/: conftest.py  test_cli.py  test_config.py  test_operations.py  test_remote.py  test_snapshot.py  test_windows.py
windows/: check-maya2024.ps1  setup-manifest.json  setup-maya2024.ps1  start-sessiond-maya2024.ps1
